# shapingTheAxe

./: CHANGELOG.md  CLAUDE.md  COHERENCE_DIAGNOSIS.md  IMPLEMENTATION_PLAN.md  MANUAL_INSTALACION_SHAPINGTHEAXE.md  README.md  SHAPING_THE_AXE_BRAIN_SPEC.md  START_HERE.md  ShapingTheAxe.md  framework.yaml
adapters/: AGENTS.stub.md  CLAUDE.stub.md  copilot-instructions.stub.md
validation/case-studies/crossfit-business-copilot/candidates/candidate-b/: .gitignore  PROVENANCE.md  README.md  package-lock.json  pyproject.toml
validation/case-studies/crossfit-business-copilot/candidates/candidate-b/data/: bookings.json  clients.json  sessions.json
validation/case-studies/crossfit-business-copilot/candidates/candidate-b/docs/: 03_API_Discovery.md  04_Acceptance_Criteria.md  05_Architecture.md  06_Handoff.md  07_Acceptance_Evaluation.md
validation/case-studies/crossfit-business-copilot/candidates/candidate-b/experiment/protocol/: EXPERIMENT_PROTOCOL.md
validation/case-studies/crossfit-business-copilot/candidates/candidate-b/scripts/: generate_dataset.py
validation/case-studies/crossfit-business-copilot/candidates/candidate-b/src/copilot/: cli.py  domain.py  formatter.py  metrics.py  nlp.py  periods.py
validation/case-studies/crossfit-business-copilot/candidates/candidate-b/src/copilot/datasource/: __init__.py  base.py  memory.py  mock.py
validation/case-studies/crossfit-business-copilot/candidates/candidate-b/tests/: conftest.py  test_cli.py  test_dataset_integration.py  test_domain.py  test_formatter.py  test_metrics.py  test_nlp.py  test_periods.py
(+89 files in other folders)
