[project]
name = "crossfit-bi-copilot"
version = "0.1.0"
description = "MVP Business Intelligence Copilot for CrossFit box owners (simulated data)."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
